--- a/html/index.html
+++ b/html/index.html
@@ -60,6 +60,7 @@
                             STUDIES</a> </div>
                     <div class="xx1" onclick="scrollToElement('html,body', '.international', 0)"> <a href="#">INTERNATIONAL
                             ENGLISH COMMUNICATION PROGRAMME</a> </div>
+                    <div class="xx1" onclick="scrollToElement('html,body', '.international', 0)"> <a href="#">CONTACT US </a> </div>
             </div>
         </div>
     </div>
@@ -70,12 +71,13 @@
             </div>
         </div>
     </a>
-   <div class="groundended">
-        <img src="../image/grounded.svg" alt="">
-    </div>
+   
   <div class="content">
         <div class="text-content-left">
             Wordington Model
+        </div>
+        <div class="groundended">
+            <img src="../image/grounded.svg" alt="">
         </div>
         <div class="container">
             <div data-wow-delay="0.2s" class="text-content wow fadeInUp">
@@ -96,7 +98,7 @@
                         knowledge for the seekers.</div> <br>
                     <div>The whole process of learning and knowledge creation is framed in and enriched with an open
                         qualitative approach (Grounded Theory), enriched with case studies and integrated with constant
-                        application.</div>
+                        application.</div> <br>
                     <div>Wordington envisages its candidates to develop themselves as ambassadors of knowledge, through
                         this model.</div>
                 </div>
@@ -305,6 +307,7 @@
                 </a>
             </div>
         </div>
+        <!-- <div class="emailWordington"> Contact us for more information: <a href="mailto:admin@wordington.com.au">admin@wordington.com.au</a></div> -->
     </div>
     <div class="bottom">
         <div class="nbxxx">
