--- a/html/wordington-certificate-programme-in-biblical-studies.html
+++ b/html/wordington-certificate-programme-in-biblical-studies.html
@@ -63,9 +63,11 @@
 
                     The Letter of James.<br> <br>
                     
-                    The Book of Revelations<br> <br>
+                    The Book of Revelations<br> 
                 </div>
             </div>
+            <div class="emailWordington"> Contact us for more information: <a href="mailto:admin@wordington.com.au">admin@wordington.com.au</a></div>
+            <div class="backNow" onclick="goBack()"><a href="#">Back</a></div><br>
         </div>
     </div>
     <div class="bottom">
