--- a/html/wordington-diploma-in-leadership-programme.html
+++ b/html/wordington-diploma-in-leadership-programme.html
@@ -52,9 +52,11 @@
                     Ethics and Leadership.<br> <br>
                     Leading Diversity. <br> <br>
                     Leadership and Decision Making. <br> <br>
-                    Leading Teams. <br> <br>
+                    Leading Teams. <br> 
                 </div>
             </div>
+            <div class="emailWordington"> Contact us for more information: <a href="mailto:admin@wordington.com.au">admin@wordington.com.au</a></div>
+            <div class="backNow" onclick="goBack()"><a href="#">Back</a></div><br>
         </div>
     </div>
     <div class="bottom">
