--- a/html/wordington-doctorate-programme-in-biblical-studies.html
+++ b/html/wordington-doctorate-programme-in-biblical-studies.html
@@ -52,6 +52,8 @@
                     Please <a href="#"> email us</a>  for more details and fees.
                 </div>
             </div>
+            <div class="emailWordington"> Contact us for more information: <a href="mailto:admin@wordington.com.au">admin@wordington.com.au</a></div>
+            <div class="backNow" onclick="goBack()"><a href="#">Back</a></div><br>
         </div>
     </div>
     <div class="bottom">
