--- a/html/wordington-health-and-nursing-programmes.html
+++ b/html/wordington-health-and-nursing-programmes.html
@@ -44,12 +44,14 @@
                     This programme is meant for a successful nursing career and aim to
                     equip the candidates to be leaders in hospitals and nursing cares.
                 </div>
-                <div class="x-x-x">
+                <!-- <div class="x-x-x">
                     Please click on the below link for more details:
                 </div>
                 <div> <a href="#"> Introduction to Nursing Leadership. </a> </div>
-                <div>  Please <a href="#">email us </a> for more details and fees.</div>
+                <div>  Please <a href="#">email us </a> for more details and fees.</div> -->
             </div>
+            <div class="emailWordington"> Contact us for more information: <a href="mailto:admin@wordington.com.au">admin@wordington.com.au</a></div>
+            <div class="backNow" onclick="goBack()"><a href="#">Back</a></div><br>
         </div>
     </div>
     <div class="bottom">
