--- a/html/wordington-leadership-certificate-programme.html
+++ b/html/wordington-leadership-certificate-programme.html
@@ -33,10 +33,10 @@
                 <div class="title">Certificate Programmes</div>
                 <div>
                     Wordington Leadership Certificate Programme is designed to develop and establish a strong foundation in selective knowledge, understanding and application of key leadership concepts. 
-                </div>
+                </div><br>
                 <div>
                     Wordington offers a range of Certificate programmes for you to advance in your leadership development. This programme is meant for beginners who are aiming to build and advance a leadership-oriented career. A few of the Certificate Programmes is listed below:
-                </div>
+                </div><br>
                 <div class="x-x-x">
                     Wordington Certificate in: <br> <br>
                     Fundamentals of Leadership. <br> <br>
@@ -47,11 +47,14 @@
                     Emotional Intelligence. <br> <br>
                     Self-Leadership.  <br> <br>
                     Charismatic Leadership.<br> <br>
-                    Transformational Leadership.<br> <br>
+                    Transformational Leadership.<br> 
                 </div>
             </div>
+            <div class="emailWordington"> Contact us for more information: <a href="mailto:admin@wordington.com.au">admin@wordington.com.au</a></div>
+            <div class="backNow" onclick="goBack()"><a href="#">Back</a></div><br>
         </div>
     </div>
+ 
     <div class="bottom">
         <div class="nbxxx"> 
             <a href="#">Privacy policy</a>
