--- a/html/wordington-master-of-leadership-programme.html
+++ b/html/wordington-master-of-leadership-programme.html
@@ -50,9 +50,11 @@
                     Leading Change. <br> <br>
                     Leadership Style Specialisation (any one to be chosen from Transformational, Autocratic or Charismatic Leadership styles). <br> <br>
                     Leadership Laboratory. <br> <br>
-                    Leadership Executive Challenge. <br> <br>
+                    Leadership Executive Challenge. <br>
                 </div>
             </div>
+            <div class="emailWordington"> Contact us for more information: <a href="mailto:admin@wordington.com.au">admin@wordington.com.au</a></div>
+            <div class="backNow" onclick="goBack()"><a href="#">Back</a></div><br>
         </div>
     </div>
     <div class="bottom">
