--- a/html/wordington-certificate-programme-in-human-resource-management.html
+++ b/html/wordington-certificate-programme-in-human-resource-management.html
@@ -60,9 +60,11 @@
 
                     Health and Safety.<br> <br>
 
-                    Managing Decision Making.<br> <br>
+                    Managing Decision Making.<br> 
                 </div>
             </div>
+            <div class="emailWordington"> Contact us for more information: <a href="mailto:admin@wordington.com.au">admin@wordington.com.au</a></div>
+            <div class="backNow" onclick="goBack()"><a href="#">Back</a></div><br>
         </div>
     </div>
     <div class="bottom">
