--- a/html/wordington-diploma-in-biblical-leadership.html
+++ b/html/wordington-diploma-in-biblical-leadership.html
@@ -56,9 +56,11 @@
                     
                     Christian Leadership and Decision Making.<br> <br>
                     
-                    Leading Christian Ministry Teams.<br> <br>
+                    Leading Christian Ministry Teams.<br>
                 </div>
             </div>
+            <div class="emailWordington"> Contact us for more information: <a href="mailto:admin@wordington.com.au">admin@wordington.com.au</a></div>
+            <div class="backNow" onclick="goBack()"><a href="#">Back</a></div><br>
         </div>
     </div>
     <div class="bottom">
