--- a/html/wordington-diploma-in-human-resource-management-programme.html
+++ b/html/wordington-diploma-in-human-resource-management-programme.html
@@ -54,9 +54,11 @@
 
                         Managing Effective Decision Making. <br> <br>
 
-                        Managing Teams. <br> <br>
+                        Managing Teams. <br> 
                 </div>
             </div>
+            <div class="emailWordington"> Contact us for more information: <a href="mailto:admin@wordington.com.au">admin@wordington.com.au</a></div>
+            <div class="backNow" onclick="goBack()"><a href="#">Back</a></div><br>
         </div>
     </div>
     <div class="bottom">
