--- a/html/wordington-graduate-programme-in-biblical-studies.html
+++ b/html/wordington-graduate-programme-in-biblical-studies.html
@@ -64,9 +64,11 @@
                     
                     Christian Leadership Laboratory.<br> <br>
                     
-                    Christian Ministry Challenges.<br> <br>
+                    Christian Ministry Challenges.<br> 
                 </div>
             </div>
+            <div class="emailWordington"> Contact us for more information: <a href="mailto:admin@wordington.com.au">admin@wordington.com.au</a></div>
+            <div class="backNow" onclick="goBack()"><a href="#">Back</a></div><br>
         </div>
     </div>
     <div class="bottom">
