--- a/html/wordington-international-english-communication-programme.html
+++ b/html/wordington-international-english-communication-programme.html
@@ -55,6 +55,8 @@
                 </div>
                 <div>  Please <a href="#">email us </a> for more details and fees.</div>
             </div>
+            <div class="emailWordington"> Contact us for more information: <a href="mailto:admin@wordington.com.au">admin@wordington.com.au</a></div>
+            <div class="backNow" onclick="goBack()"><a href="#">Back</a></div><br>
         </div>
     </div>
     <div class="bottom">
