--- a/html/wordington-master-of-human-resource-management-programme.html
+++ b/html/wordington-master-of-human-resource-management-programme.html
@@ -63,9 +63,11 @@
                     
                     HRM Laboratory. <br> <br>
                     
-                    Managing Executive Challenges. <br> <br>
+                    Managing Executive Challenges. <br>
                 </div>
             </div>
+            <div class="emailWordington"> Contact us for more information: <a href="mailto:admin@wordington.com.au">admin@wordington.com.au</a></div>
+            <div class="backNow" onclick="goBack()"><a href="#">Back</a></div><br>
         </div>
     </div>
     <div class="bottom">
