--- a/html/about-us.html
+++ b/html/about-us.html
@@ -106,6 +106,7 @@
 </body>
 
 </html>
+<script src="../js/goHome.js"></script>
 <script>
     show = document.getElementById("nav-link");
     function showMenu() {
@@ -115,7 +116,4 @@
         show.style.right = "-250px";
     }
     new WOW().init();
-    function goBack() {
-       window.history.back();
-    }
 </script>
