--- a/html/index.html
+++ b/html/index.html
@@ -326,7 +326,7 @@
     }
     function closeMenu() {
         show.style.right = "-250px";
-        show.style.display = "none";
+        // show.style.display = "none";
     }
     
     function scrollToElement(parentSelector, targetSelector, offsetTop) {
