--- a/html/wordington-certificate-programme-in-biblical-studies.html
+++ b/html/wordington-certificate-programme-in-biblical-studies.html
@@ -79,9 +79,7 @@
     </div>
 </body>
 </html>
+<script src="../js/goHome.js"></script>
 <script>
     new WOW().init();
-    function goBack() {
-       window.history.back();
-    }
 </script>
