--- a/html/wordington-doctorate-programme-in-biblical-studies.html
+++ b/html/wordington-doctorate-programme-in-biblical-studies.html
@@ -65,6 +65,7 @@
     </div>
 </body>
 </html>
+<script src="../js/goHome.js"></script>
 <script>
     show = document.getElementById("nav-link");
     function showMenu() {
@@ -74,7 +75,4 @@
         show.style.right = "-250px";
     }
     new WOW().init();
-    function goBack() {
-       window.history.back();
-    }
 </script>
