--- a/html/wordington-health-and-nursing-programmes.html
+++ b/html/wordington-health-and-nursing-programmes.html
@@ -63,6 +63,7 @@
     </div>
 </body>
 </html>
+<script src="../js/goHome.js"></script>
 <script>
     show = document.getElementById("nav-link");
     function showMenu() {
@@ -72,7 +73,4 @@
         show.style.right = "-250px";
     }
     new WOW().init();
-    function goBack() {
-       window.history.back();
-    }
 </script>
