--- a/html/wordington-certificate-programme-in-human-resource-management.html
+++ b/html/wordington-certificate-programme-in-human-resource-management.html
@@ -76,6 +76,7 @@
     </div>
 </body>
 </html>
+<script src="../js/goHome.js"></script>
 <script>
     show = document.getElementById("nav-link");
     function showMenu() {
@@ -85,7 +86,4 @@
         show.style.right = "-250px";
     }
     new WOW().init();
-    function goBack() {
-       window.history.back();
-    }
 </script>
