--- a/html/wordington-diploma-in-biblical-leadership.html
+++ b/html/wordington-diploma-in-biblical-leadership.html
@@ -72,6 +72,7 @@
     </div>
 </body>
 </html>
+<script src="../js/goHome.js"></script>
 <script>
     show = document.getElementById("nav-link");
     function showMenu() {
@@ -81,7 +82,4 @@
         show.style.right = "-250px";
     }
     new WOW().init();
-    function goBack() {
-       window.history.back();
-    }
 </script>
