--- a/html/wordington-diploma-in-human-resource-management-programme.html
+++ b/html/wordington-diploma-in-human-resource-management-programme.html
@@ -70,6 +70,7 @@
     </div>
 </body>
 </html>
+<script src="../js/goHome.js"></script>
 <script>
     show = document.getElementById("nav-link");
     function showMenu() {
@@ -79,7 +80,4 @@
         show.style.right = "-250px";
     }
     new WOW().init();
-    function goBack() {
-       window.history.back();
-    }
 </script>
