--- a/html/wordington-doctorate-programme-in-leadership.html
+++ b/html/wordington-doctorate-programme-in-leadership.html
@@ -60,6 +60,7 @@
     </div>
 </body>
 </html>
+<script src="../js/goHome.js"></script>
 <script>
     show = document.getElementById("nav-link");
     function showMenu() {
@@ -69,7 +70,4 @@
         show.style.right = "-250px";
     }
     new WOW().init();
-    function goBack() {
-       window.history.back();
-    }
 </script>
