--- a/html/wordington-graduate-programme-in-biblical-studies.html
+++ b/html/wordington-graduate-programme-in-biblical-studies.html
@@ -80,6 +80,7 @@
     </div>
 </body>
 </html>
+<script src="../js/goHome.js"></script>
 <script>
     show = document.getElementById("nav-link");
     function showMenu() {
@@ -89,7 +90,4 @@
         show.style.right = "-250px";
     }
     new WOW().init();
-    function goBack() {
-       window.history.back();
-    }
 </script>
