--- a/html/wordington-international-english-communication-programme.html
+++ b/html/wordington-international-english-communication-programme.html
@@ -68,6 +68,7 @@
     </div>
 </body>
 </html>
+<script src="../js/goHome.js"></script>
 <script>
     show = document.getElementById("nav-link");
     function showMenu() {
@@ -77,7 +78,4 @@
         show.style.right = "-250px";
     }
     new WOW().init();
-    function goBack() {
-       window.history.back();
-    }
 </script>
