--- a/html/wordington-master-of-human-resource-management-programme.html
+++ b/html/wordington-master-of-human-resource-management-programme.html
@@ -79,6 +79,7 @@
     </div>
 </body>
 </html>
+<script src="../js/goHome.js"></script>
 <script>
     show = document.getElementById("nav-link");
     function showMenu() {
@@ -88,7 +89,4 @@
         show.style.right = "-250px";
     }
     new WOW().init();
-    function goBack() {
-       window.history.back();
-    }
 </script>
