--- a/html/wordington-master-of-leadership-programme.html
+++ b/html/wordington-master-of-leadership-programme.html
@@ -66,6 +66,7 @@
     </div>
 </body>
 </html>
+<script src="../js/goHome.js"></script>
 <script>
     show = document.getElementById("nav-link");
     function showMenu() {
@@ -75,7 +76,4 @@
         show.style.right = "-250px";
     }
     new WOW().init();
-    function goBack() {
-       window.history.back();
-    }
 </script>
