--- a/html/wordington-doctorate-programme-in-human-resource-management.html
+++ b/html/wordington-doctorate-programme-in-human-resource-management.html
@@ -19,7 +19,7 @@
         <div class="container">
             <div class="nav-bar">
                 <div class="nav-link" id="nav-link">
-                        <a href="#" onclick="goBack()" >Home</a>
+                        <a href="#" onclick="goHome()" >Home</a>
                 </div>
             </div>
         </div>
@@ -48,7 +48,7 @@
                 </div>
             </div>
             <div class="emailWordington"> Contact us for more information: <a href="mailto:admin@wordington.com.au">admin@wordington.com.au</a></div>
-            <div class="backNow" onclick="goBack()"><a href="#">Back</a></div><br>
+            <div class="backNow" onclick="goHome()"><a href="#">Back</a></div><br>
         </div>
     </div>
     <div class="bottom">
